test/libyul/yulSyntaxTests/objects/empty_data.yul
object "A" {
  data "tmp" ""
}
// ----
// ParserError 4846: (15-19='data'): Expected keyword "code".
